Added more descriptions, remade pdf

--- a/resume.tex
+++ b/resume.tex
@@ -1,7 +1,7 @@
 %-------------------------
 % Resume in Latex
-% Author : Jake Gutierrez
-% Based off of: https://github.com/sb2nov/resume
+% Author : Ziyan Imran
+% Based off of: https://github.com/jakegut/resume
 % License : MIT
 %------------------------
 
@@ -124,7 +124,7 @@
   \resumeSubHeadingListStart
     \resumeSubheading
       {University of Baltimore County}{Catonsville, MD}
-      {Bachelor of Science in Biololgical Sciences, Minor in Statistics}{January 2022}
+      {Bachelor of Science, Minor in Statistics}{January 2022}
   \resumeSubHeadingListEnd
 
 
@@ -137,6 +137,7 @@
       {GAMA-1}{College Park, MD}
       \resumeItemListStart
         \resumeItem{Containerized satellite processing algorithms into an easily configurable platform}
+        \resumeItem{Automated sequential running of satellite processing algorithms through various python wrapper scripts}
       \resumeItemListEnd
       
 % -----------Multiple Positions Heading-----------
@@ -176,11 +177,11 @@
       \resumeProjectHeading
           {\textbf{Nanoleaf} $|$ \emph{Python, Flask, Bootstrap, Docker}}{Feb 2022 -- Present}
           \resumeItemListStart
-            \resumeItem{Developed a full-stack web application using with Flask serving as the frontend}
-            \resumeItem{Visualized and controls Nanoleaf smart LED Panel system}
+            \resumeItem{Developed a full-stack web application using Flash and with basic JavaScript/CSS/HTML with Bootstrap serving as the frontend}
+            \resumeItem{Visualizes and controls Nanoleaf smart LED Panel system for home use}
           \resumeItemListEnd
       \resumeProjectHeading
-          {\textbf{Telegram Bot} $|$ \emph{Python}}{Sep 2021 -- Present}
+          {\textbf{Telegram Bot} $|$ \emph{Python, Google Cloud Platform}}{Sep 2021 -- Present}
           \resumeItemListStart
             \resumeItem{Implemented basic Telegram bot that adds text modification 'slash' commands}
           \resumeItemListEnd
