--- a/resume.tex
+++ b/resume.tex
@@ -114,7 +114,7 @@
 \begin{center}
     \textbf{\Huge \scshape Ziyan Imran} \\ \vspace{1pt}
     \small 123-456-7890 $|$ \href{mailto:x@x.com}{\underline{ziyan.imran@gmail.com}} $|$ 
-    \href{https://linkedin.com/in/...}{\underline{linkedin.com/in/Ziyan}} $|$
+    \href{https://linkedin.com/in/...}{\underline{linkedin.com/in/ziyan-imran}} $|$
     \href{https://github.com/...}{\underline{github.com/Ziyan-Imran}}
 \end{center}
 
