Added using docker/AWS to GAMA1 line

--- a/resume.tex
+++ b/resume.tex
@@ -136,7 +136,8 @@
       {Python Developer}{January 2022 -- Present}
       {GAMA-1}{College Park, MD}
       \resumeItemListStart
-        \resumeItem{Containerized satellite processing algorithms into an easily configurable platform}
+        \resumeItem{Containerized satellite processing algorithms into an 
+                    easily configurable platform utilizing docker and AWS}
         \resumeItem{Automated sequential running of satellite processing algorithms through various python wrapper scripts}
       \resumeItemListEnd
       
