Added RIOT games API project, updated Frameworks section

--- a/resume.tex
+++ b/resume.tex
@@ -186,6 +186,12 @@
           \resumeItemListStart
             \resumeItem{Implemented basic Telegram bot that adds text modification 'slash' commands}
           \resumeItemListEnd
+      \resumeProjectHeading
+          {\textbf{Riot Game API Match Analysis} $|$ \emph{Python, REST API, Django}}{June 2022 -- Present}
+          \resumeItemListStart
+            \resumeItem{Connects to RIOT Games API utilizing various third-party libraries (pandas, NumPy)}
+            \resumeItem{Created functions that creates a comprehensive analysis report on specified number of recent matches}
+          \resumeItemListEnd
     \resumeSubHeadingListEnd
 
 
@@ -196,7 +202,7 @@
  \begin{itemize}[leftmargin=0.15in, label={}]
     \small{\item{
      \textbf{Languages}{: Python, SQL (Postgres), Rust, JavaScript, HTML/CSS, R} \\
-     \textbf{Frameworks}{: React, Vue.js, Flask} \\
+     \textbf{Frameworks}{: Flask, Django} \\
      \textbf{Developer Tools}{: Git, Docker, Google Cloud Platform, VS Code, PyCharm} \\
      \textbf{Libraries}{: pandas, NumPy, Matplotlib}
     }}
